# codex-threadripper

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  homebrew-tap-sync.yml  npm-publish.yml  release-candidate.yml  release.yml
scripts/: build-npm-matrix.mjs  npm-matrix-config.json  smoke_release.py
src/: backup.rs  cli.rs  codex_config.rs  config.rs  fs_sync.rs  locale.rs  main.rs  output.rs  rollout.rs  service.rs  sqlite.rs  state_db.rs  status.rs  stores.rs  sync.rs  tests.rs  types.rs  watch.rs
src/service/: process.rs  tests.rs
wix/: main.wxs
